--- a/main.css
+++ b/main.css
@@ -2,7 +2,8 @@
     --primary-color: #fdf6e3;
     --primary-font: 'Fira Sans', sans-serif;
     --primary-font-size: 20px;
-    --title-font-color: #268bd2;
+    --header-font-color: #268bd2;
+    --footer-font-color: #93a1a1;
 }
 
 html,
@@ -14,8 +15,6 @@ body {
     background-color: var(--primary-color);
     font-family: var(--primary-font);
     font-size: var(--primary-font-size);
-
-
     overflow: hidden;
     display: flex;
     flex-flow: column;
@@ -37,7 +36,7 @@ body {
 }
 
 .header-title-main {
-    color: var(--title-font-color);
+    color: var(--header-font-color);
     text-transform: uppercase;
     font-weight: bolder;
     display: inline-block;
@@ -46,4 +45,45 @@ body {
 
 .site-content {
     flex: 1;
+    display: flex;
+    flex-direction: row;
+    padding: 0.25em 0.50em 0.25em 0.50em;
+}
+
+.site-content-left {
+    width: 300px;
+}
+
+.site-content-right {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 0.25em 0.50em 0.25em 0.50em;
+}
+
+.chart-header {
+    height: 1em;
+    font-size: 0.75em;
+    padding: 0.25em 0 0.25em 0;
+}
+
+.chart-main {
+    flex: 1;
+}
+
+.site-footer {
+    font-size: 0.75em;
+    height: 0.75em;
+    padding: 0.25em 0.50em 0.25em 0.50em;
+    background: #eee8d5;
+    display: flex;
+    align-items: center;
+}
+
+.footer-title-main {
+    color: var(--footer-font-color);
+    text-transform: uppercase;
+    font-weight: bolder;
+    display: inline-block;
+    letter-spacing: .01em;
 }
