--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@
     --primary-color: #fdf6e3;
     --primary-font: 'Fira Sans', sans-serif;
     --primary-font-size: 20px;
+    --primary-font-color: #586e75;
     --header-font-color: #268bd2;
     --footer-font-color: #93a1a1;
 }
@@ -15,6 +16,7 @@ body {
     background-color: var(--primary-color);
     font-family: var(--primary-font);
     font-size: var(--primary-font-size);
+    color: var(--primary-font-color);
     overflow: hidden;
     display: flex;
     flex-flow: column;
@@ -65,7 +67,7 @@ body {
     height: 1em;
     font-size: 0.65em;
     text-transform: uppercase;
-    padding: 0.25em 0 0.25em 0;
+    padding: 0.25em 0 1.0em 0;
 }
 
 .chart-main {
@@ -75,18 +77,31 @@ body {
 .site-footer {
     font-size: 0.85em;
     height: 0.85em;
-    padding: 0.25em 0.50em 0.25em 0.50em;
+    padding: 0.50em 0.50em 0.50em 0.50em;
     background: #eee8d5;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 .footer-title-main {
     color: var(--footer-font-color);
     text-transform: uppercase;
     font-weight: bolder;
-    display: inline-block;
+    /* display: inline-block; */
     letter-spacing: .01em;
+}
+
+.footer-title-sub {
+    color: var(--footer-font-color);
+    text-transform: uppercase;
+    font-weight: normal;
+    /* display: ; */
+    /* letter-spacing: .01em; */
+}
+
+.event {
+    fill: #586e75;
 }
 
 .axis {
@@ -96,7 +111,7 @@ body {
 .axis path,
 .axis line {
     fill: none;
-    stroke: #838384;
+    stroke: #93a1a1;
     opacity: .4;
     stroke-dasharray: 0 10;
     stroke-linecap: round;
