--- a/main.css
+++ b/main.css
@@ -53,7 +53,24 @@ body {
 }
 
 .site-content-left {
-    width: 400px;
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    padding: 0.25em 0 0.25em 0;
+}
+
+.information {
+    flex-grow: 1;
+}
+
+.map {
+    height: 200px;
+    border: solid #93a1a1 1px;
+}
+
+.country {
+    fill: #93a1a1;
+    padding: 0.25em 0 0 0;
 }
 
 .site-content-right {
