--- a/main.css
+++ b/main.css
@@ -70,7 +70,11 @@ body {
 
 .country {
     fill: #93a1a1;
-    padding: 0.25em 0 0 0;
+    padding: 0.25em 0 0 022222;
+}
+
+.country-over {
+    fill: #dc322f;
 }
 
 .site-content-right {
