--- a/main.css
+++ b/main.css
@@ -95,11 +95,21 @@ body {
     padding: 0.25em 0 1.0em 0;
 }
 
+.button-order {
+    display: flex;
+    flex-direction: row;
+    margin: 0 50px 0 0;
+    /* flex-basis: auto; */
+}
+
+.button-color {
+    display: flex;
+    flex-direction: row;
+}
+
 .chart-button label {
-    text-transform: uppercase;
     cursor: pointer;
     padding: 0 5px;
-    /* line-height: 11px; */
 }
 
 .chart-button label:first-of-type {
