--- a/main.css
+++ b/main.css
@@ -17,7 +17,7 @@ body {
     font-family: var(--primary-font);
     font-size: var(--primary-font-size);
     color: var(--primary-font-color);
-    overflow: hidden;
+    /* overflow: hidden; */
     display: flex;
     flex-flow: column;
 }
@@ -49,7 +49,7 @@ body {
     flex: 1;
     display: flex;
     flex-direction: row;
-    padding: 0.25em 0.50em 0.25em 0.50em;
+    /* padding: 0.25em 0.50em 0.25em 0.50em; */
 }
 
 .site-content-left {
@@ -57,6 +57,7 @@ body {
     display: flex;
     flex-direction: column;
     padding: 0.25em 0 0.25em 0;
+    border-right: solid #93a1a1 3px;
 }
 
 .information {
@@ -66,19 +67,40 @@ body {
 }
 
 .refine {
-    padding: 0.50em 0 0.50em 0;
+    padding: 1em 0.75em 1em 0.75em;
+    border-top: solid #93a1a1 2px;
+    border-bottom: solid #93a1a1 2px;
 }
 
-.refine-button {}
+.refine-button {
+    cursor: pointer;
+    font-weight: 700;
+}
 
 .refine-selector {
-    padding: 0.50em 0 0.50em 0;
     display: none;
+    font-size: 0.75em;
+    padding: 0.50em 0 0 0em;
+}
+
+.refine-flex-container {
+    display: flex;
+    flex-direction: row;
+}
+
+.refine-order {
+    cursor: pointer;
+    padding: 0 0.25em 0 0.50em;
+}
+
+.refine-selector-selected {
+    fill: #268bd2;
 }
 
 .map {
     height: 200px;
-    border: solid #93a1a1 1px;
+    border-bottom: solid #93a1a1 2px;
+    /* border: solid #93a1a1 1px; */
 }
 
 .country {
@@ -96,10 +118,11 @@ body {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    padding: 0.25em 0.50em 0.25em 0.50em;
+    padding: 0.50em 0.5em 0.50em 0.5em;
 }
 
 .chart-button {
+    display: none;
     display: flex;
     flex-direction: row;
     height: 1em;
