--- a/main.css
+++ b/main.css
@@ -17,18 +17,21 @@ body {
     font-family: var(--primary-font);
     font-size: var(--primary-font-size);
     color: var(--primary-font-color);
+}
+
+.body {
     overflow: hidden;
-    display: flex;
-    flex-flow: column;
 }
 
 .site-container {
-    height: 100vh;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
+    height: 100%;
 }
 
 .site-header {
+    flex: 0 0 auto;
     font-size: 1em;
     height: 1em;
     padding: 0.50em 0.75em 0.50em 0.75em;
@@ -46,17 +49,23 @@ body {
 }
 
 .site-content {
-    flex: 1;
+    flex: 1 1 auto;
+    position: relative;
+    /* need this to position inner content */
+    overflow-y: hidden;
+    /* flex: 1; */
     display: flex;
     flex-direction: row;
 }
 
 .site-content-left {
     width: 300px;
+    min-width: 300px;
     display: flex;
     flex-direction: column;
     padding: 0.25em 0 0.25em 0;
     border-right: solid #93a1a1 3px;
+    overflow-y: auto;
 }
 
 .information {
@@ -87,7 +96,9 @@ body {
 }
 
 .information-country-year,
-.information-country-death {
+.information-country-death,
+.information-country-victim,
+.information-country-region {
     font-size: 0.75em;
     border-top: solid #93a1a1 1px;
     margin: 0 0 5px 0;
@@ -98,10 +109,19 @@ body {
 }
 
 .information-country-year-label,
-.information-country-death-label {
+.information-country-death-label,
+.information-country-victim-label,
+.information-country-region-label {
     text-transform: uppercase;
     color: #93a1a1;
     flex-shrink: 1;
+}
+
+.information-country-year-value,
+.information-country-death-value,
+.information-country-victim-value,
+.information-country-region-value {
+    text-align: right;
 }
 
 .refine {
@@ -176,8 +196,8 @@ body {
 .country {
     fill: #93a1a1;
     padding: 0.25em 0 0 0;
-    stroke: 1px;
-    stroke-opacity: 0;
+    stroke: #fdf6e3;
+    stroke-width: 0.0750px;
 }
 
 .country-over {
@@ -185,7 +205,7 @@ body {
 }
 
 .site-content-right {
-    flex-grow: 1;
+    flex: 1 1 auto;
     display: flex;
     flex-direction: row;
     padding: 0.50em 0.5em 0.50em 0.5em;
@@ -266,9 +286,11 @@ body {
 }
 
 .site-footer {
-    font-size: 0.85em;
-    height: 0.85em;
-    padding: 0.50em 0.50em 0.75em .50em;
+    /* flex-shrink: 1; */
+    flex: 0 0 auto;
+    font-size: 1em;
+    height: 1em;
+    padding: 0.50em 0.75em 0.50em 0.75em;
     background: #eee8d5;
     display: flex;
     align-items: center;
