--- a/main.css
+++ b/main.css
@@ -64,6 +64,7 @@ body {
     padding: 0.25em 0 0.25em 0;
     border-right: solid #93a1a1 3px;
     overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .information {
@@ -224,6 +225,7 @@ body {
     fill: #586e75;
     height: 50px;
 }
+
 
 
 /* .legend-region-flex {
