--- a/main.css
+++ b/main.css
@@ -19,9 +19,15 @@ body {
     color: var(--primary-font-color);
 }
 
-
-
-
+.loader {
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 500;
+    width: 100%;
+    height: 100%;
+    overflow: visible;
+}
 
 
 /* This is wrong --- test */
@@ -245,6 +251,8 @@ body {
     fill: #586e75;
     height: 50px;
 }
+
+
 
 
 
