--- a/main.css
+++ b/main.css
@@ -19,9 +19,6 @@ body {
     color: var(--primary-font-color);
 }
 
-
-/* This is wrong --- test */
-
 .body {
     overflow: hidden;
 }
@@ -78,6 +75,21 @@ body {
 .information-primary {
     font-size: 0.75em;
     padding-bottom: 1em;
+}
+
+.information-primary-instruction-title {
+    font-size: 0.85em;
+    font-weight: 700;
+    padding-bottom: 0.50em;
+    padding: 0;
+    list-style: disc inside;
+    text-indent: -1em;
+    padding-left: 1em;
+}
+
+.information-primary-instruction {
+    padding: 0.50em 0 0 0;
+    font-weight: 400;
 }
 
 .information-country,
@@ -193,7 +205,7 @@ body {
 .refine-selector,
 .statistic-selector {
     display: none;
-    font-size: 0.75em;
+    font-size: 0.70em;
 }
 
 .refine-flex-container,
@@ -208,6 +220,10 @@ body {
 .refine-order {
     cursor: pointer;
     padding: 0 0.25em 0 0.50em;
+}
+
+.refine-order-label {
+    font-weight: 700;
 }
 
 .refine-selector-selected {
@@ -241,6 +257,34 @@ body {
     fill: #586e75;
     height: 50px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
