--- a/main.css
+++ b/main.css
@@ -387,6 +387,15 @@ body {
     fill: #268bd2;
 }
 
+.event-over-colored {
+    stroke: #000000;
+    stroke-width: 0px;
+}
+
+.event-over-colored-on {
+    stroke-width: 2px;
+}
+
 .axis {
     font-size: 12px
 }
