--- a/main.css
+++ b/main.css
@@ -352,6 +352,7 @@ body {
     padding: 0.50em 0.75em 0.50em 0.75em;
     background: #eee8d5;
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: space-between;
 }
@@ -372,10 +373,30 @@ body {
     color: #268bd2;
 }
 
+.footer-title-sub-wrapper {
+    display: flex;
+    flex-direction: row;
+}
+
 .footer-title-sub {
     color: var(--footer-font-color);
     text-transform: uppercase;
     font-weight: normal;
+}
+
+.footer-title-sub-octocat {
+    margin-left: 0.50em;
+}
+
+.octocat {
+    width: 1em;
+    height: 1em;
+    fill: #586e75;
+}
+
+.octocat:hover {
+    fill: #268bd2;
+    cursor: pointer;
 }
 
 .event {
