--- a/main.css
+++ b/main.css
@@ -19,6 +19,17 @@ body {
     color: var(--primary-font-color);
 }
 
+.loader {
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 500;
+    width: 100%;
+    height: 100%;
+    overflow: visible;
+    background: #fdf6e3 url('Blocks.svg') no-repeat center center;
+}
+
 .body {
     overflow: hidden;
 }
